[package]
name = "aes_unknown_keys"
version = "0.1.0"
authors = ["Zacchary Dempsey-Plante <zacc@ztdp.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.6.0"
async-std = "1.9.0"
futures = "0.3.12"
num_cpus = "1.13.0"
rayon = "1.5.0"

[profile.release]
opt-level = 3
